--- a/src/content/blog/test-post/index.mdx
+++ b/src/content/blog/test-post/index.mdx
@@ -3,7 +3,7 @@ title: 'Test article'
 description: 'First one!'
 date: 2024-10-02
 tags: ['personal']
-image: './img.jpg'
+image: 'img.jpg'
 ---
 
 # Hello world!
