--- a/src/content/blog/test-post/index.mdx
+++ b/src/content/blog/test-post/index.mdx
@@ -15,3 +15,7 @@ I upgraded a bit to my taste with DaisyUI as I don't really like Shadcn for pers
 I want to add some more features & tweak the design a little bit, so that's probably the next steps.
 Also, I will soon publish my first article on the path I took to actually deploy such a project from scratch:
 inspirations, template, UI-lib, deploy and so on.
+
+```ts
+const tsCode = "const tsCode = 'Hello World!'"
+```
