Add some UI changes; Checkpoint

--- a/src/content/blog/test-post/index.mdx
+++ b/src/content/blog/test-post/index.mdx
@@ -1,4 +1,5 @@
 ---
+id: 'test-article-test'
 title: 'Test article'
 description: 'First one!'
 date: 2024-10-02
@@ -17,5 +18,5 @@ Also, I will soon publish my first article on the path I took to actually deploy
 inspirations, template, UI-lib, deploy and so on.
 
 ```ts
-const tsCode = "const tsCode = 'Hello World!'"
+const tsCode = 'Hello World!'
 ```
